--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
 body {
     padding: 0%;
@@ -39,39 +39,39 @@ h1 {
     border-radius: 80px 0px 0px 80px;
 }
 
+#formContainer{
+    margin-left: 56px !important;
+}
+
 .formDivPadding {
     padding: 20px;
 }
 
 .formDivHeader {
-    margin: 5% 0%;
+    margin: 2% 0%;
     font-size: 10px;
 }
 
-.formDivHeader h1 {
-    font-size: 4.8em;
-    margin-top: -14px;
-}
-
 #brandLogo {
-    height: 18px !important;
-    width: 18px !important;
+    height: 24px !important;
+    width: 24px !important;
     background-color: #473A2E;
     border-radius: 20px;
 }
 
 #brandName {
-    font-size: 3em;
-    margin-bottom: 20px;
-    align-items: center;
+    font-size: 2.4em !important;
+    margin-bottom: 80px !important;
+    margin-right: 24px !important;
+    align-items: center !important;
+    font-weight: 700;
 }
 
 /* Login Form */
 
 
-#signInform,
-#signUpform {
-    font-size: 8px;
+#signInform {
+    font-size: 10px;
     margin-left: auto;
     margin-right: auto;
     display: table;
@@ -79,23 +79,26 @@ h1 {
 
 label {
     font-size: 2.4em;
+    color: rgba(105, 97, 97, 1);
+    font-weight: 600;
 }
 
-#signIn,
+/* #signIn, */
 #signUp {
     font-size: 3.6em;
     margin-top: -12px;
     margin-bottom: 20px;
+    font-weight: 700;
 }
 
 #signInform input {
-    height: 42px;
+    height: 52px;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 12px;
     font-size: initial;
     padding: 5px;
     background: #FFFFFF;
-    border-radius: 6px;
+    border-radius: 15px;
     border: 1px solid #DB6516;
 }
 
@@ -114,9 +117,11 @@ a:hover {
 
 #signInform button {
     width: 100%;
-    height: 42px;
+    height: 52px;
+    border-radius: 15px;
     font-size: 2.4em;
-    padding: 5px;
+    padding: 3px;
+    font-weight: 700;
 }
 
 button:hover {
@@ -126,14 +131,18 @@ button:hover {
 
 #forgotPass {
     font-size: 2em;
-    margin: 10px 0px 24px 0px;
+    margin: 13px 0px 24px 0px;
     justify-content: flex-end;
+    font-weight: 600;
 }
 
 #notRegistered {
     justify-content: start;
     font-size: 2.4em;
     margin: 10px 0px 32px 0px;
+    font-weight: 600;
+    color: #335232;
+    ;
 }
 
 #createAccount:hover,
@@ -146,6 +155,12 @@ button:hover {
     font-size: 3em;
     align-items: center;
     margin: 20px;
+}
+
+#otpSignIn {
+    color: #727272;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 .line {
